# panphon

./: .gitignore  MANIFEST.in  README.md  README.rst  apply_diacritics.py  diacritic_definitions.yml  phoible_phonemes_ties.csv  pyproject.toml  segment_features.csv  setup.py
panphon/: __init__.py  _panphon.py  collapse.py  distance.py  featuretable.py  panphon.py  panphonvec.py  permissive.py  segment.py  sonority.py  test_distance.py  test_panphon.py  test_panphon_methods.py  test_permissive_methods.py  test_sonority.py  tokenizer.py  trie.py  wordtosegs.py  xsampa.py
panphon/.openhands/: pre-commit.sh
panphon/data/: asjp.yml  diacritic_definitions.yml  dogolpolsky_prime.yml  feature_weights.csv  ipa-xsampa.csv  ipa_all.csv  ipa_bases.csv  ipa_table.csv  phoible_phonemes.csv  segment_features.csv  segment_features_phoible.csv
panphon/test/: test_distance.py  test_featuretable.py  test_panphon.py  test_panphon_methods.py  test_panphonvec.py  test_permissive_methods.py  test_sonority.py  test_xsampa.py
